clusters/homelab/apps/httpbin/httpbin-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: homelab
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - httpbin.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: httpbin
          port: 8080
